--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Youtube API testing</title>
     <!-- jquery cdn -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <style>
         iframe {
             float: right;
@@ -20,6 +20,9 @@
 </head>
 <body>
 
+    <div class="container">
+
+    
         <button id="search" data-name="earthquake">Youtube Data Activity (See Console)</button>
         <div id="player"></div>
         <div id="player1"></div>
@@ -27,6 +30,7 @@
         <div id="player3"></div>
         <div id="player4"></div>
 
+    </div>
 
         <!-- logic.js -->
         <script src="logic.js"></script>
